...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Title:"
                    android:textSize="@dimen/input_size" />

                <EditText
                    android:id="@+id/et_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="textAutoComplete"
                    android:hint="Carrot Cake"
                    tools:ignore="TouchTargetSizeCheck" />
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Difficulty:"
                android:textSize="@dimen/input_size"/>

                <Spinner
                    android:id="@+id/sr_difficulty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/difficulties"
                    android:spinnerMode="dialog" />
            </LinearLayout>

...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guide:"
                android:textSize="@dimen/input_size"/>

            <EditText
                android:id="@+id/et_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write Instructions here."
                android:autofillHints=""
                android:inputType="textMultiLine"
                android:maxLines="15"
...
                android:scrollbars="vertical" />

        </LinearLayout>

            <!-- submit -->
            <Button
                android:id="@+id/btn_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_desciption"
                android:text="Publish Recipe"
                android:backgroundTint="@color/sky_blue"/>
        </LinearLayout>
...
