...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_scrollFlags="scroll|enterAlways"
        android:elevation="4dp"
        app:title="@string/app_name">

...
            android:layout_margin="8dp"
            android:outlineSpotShadowColor="@color/orange_light"
            android:outlineAmbientShadowColor="@color/orange_light" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recipelist"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        tools:listitem="@layout/recipe_card">
...
