<resources>
    <string name="app_name">Pantri Pal</string>

    <string name="action_settings">Settings</string>
    <string name="student_records_system">Student Records System</string>
    <string name="title_activity_students">SRSYS: Students</string>
    <string name="title_activity_courses">SRSYS: Courses</string>
    <string name="title_activity_student_courses">SRSYS: Student Course History</string>
    <string name="title_activity_course_students">SRSYS: Course Registrations</string>
    <string name="students">Students</string>
    <string name="courses">Courses</string>
    <string name="registrations">Registrations</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="student_id">Student ID</string>
    <string name="course_id">Course ID</string>
    <string name="gpa">GPA</string>
    <string name="fatalError">Fatal error</string>
    <string name="warning">Warning</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="added_recipes">My Recipes</string>
    <string name="search">Search</string>
    <string name="pantry">Pantry</string>
    <string name = "quantity">Quantity</string>
    <string name = "x">X</string>
    <string name = "ingredient">Ingredient</string>
    
    <string-array name="difficulties">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
    </string-array>

    <string-array name="units">
        <item>g</item>
        <item>ml</item>
        <item>L</item>
        <item>pieces</item>
        <item>servings</item>
        <item>oz</item>
    </string-array>

</resources>
