<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save_recipe"
        android:icon="@drawable/ic_star_border"
        app:showAsAction="always"
        android:title="Save Recipe"/>

</menu>