...
            app:tabTextColor="@color/dark_gray"
            app:tabMaxWidth="0dp"
            app:tabGravity="fill"
            app:tabMode="fixed"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/saved_recipes_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_recipes_recycler"
...
